tests/rosetta/out/Zig/24-game.error
zig build: exit status 1
/tmp/24-game.zig:60:17: error: unused capture
/tmp/24-game.zig:76:16: error: use of undeclared identifier 'input'
